# pymathematic

./: .gitignore  README.md  __init__.py  _types.py  errors.py  functions.py  pyproject.toml
src/: _types.py  errors.py
src/pymathematic/: __init__.py  _types.py  constants.py  errors.py  functions.py
